# gematria-engine

./: .gitignore  README.md  pyproject.toml
gematria_engine/: __init__.py  gematria_engine.py  mispar.py
tests/: test_mispar.py
