[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gematria_engine"
version = "0.1.1"
authors = [
  { name="Peter B. Golbus", email="pgolbus@gmail.com" },
]
description = "Python package for doing various gematria computations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/pgolbus/gematria-engine"
"Bug Tracker" = "https://github.com/pgolbus/gematria-engine/issues"